tests/snapshots/examples_fixtures/type_system__failing__80_type_adt_constructor_arity_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/80_type_adt_constructor_arity_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E085]: CONSTRUCTOR PATTERN ARITY MISMATCH

Constructor pattern `Pair` expects 2 argument(s) but got 1.

  --> examples/type_system/failing/80_type_adt_constructor_arity_mismatch.flx:7:9
  |
7 |         Pair(a) -> a,
  |         ^^^^^^^

Hint:
  Check the constructor's declared pattern field count.
== stdout ==
<not executed>
